tests/errors/error_display/test_hll_defer_double_drop.err.expected
error: at 4:29: [INIT-UseAfterMove] In function 'f': variable 'b' is used after move
   |
 4 |             defer { let x = b; };
   |                             ^
